--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "2d-polygon-boolean": "^1.0.1",
     "babelify": "^6.1.2",
     "browserify": "^10.2.4",
     "budo": "^4.1.0",
